--- a/modules/ROOT/pages/summary.adoc
+++ b/modules/ROOT/pages/summary.adoc
@@ -1,74 +1,77 @@
-= Resum Executiu
+= Resumen Ejecutivo
 ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
 include::{partialsdir}/README.adoc[tag=metadata]
 
-El setembre de 2016 l'Ajuntament de Barcelona endegà un important procés de transformació digital anunciant que els serveis públics han de ser proveïts ja des de l'inici a través de canals digitals, seguint una nova directriu basada en l'orientació al ciutadà, l'ús d'estàndards oberts i programari obert, i d'acord amb una estratègia de dades ètica que posa la privacitat, transparència i els drets digitals al bell mig.
+En setiembre del 2016, el Ayuntamiento de Barcelona emprendió un importante proceso de transformación digital al anunciar que los servicios públicos deben proveerse ya desde el inicio mediante canales digitales, siguiendo una nueva directriz basada en la orientación a la ciudadanía y el uso de estándares abiertos y software abierto, y de acuerdo con una estrategia de datos éti-ca que da prioridad a la privacidad, a la transparencia y a los derechos digitales.
 
-La decisió del govern de la ciutat està basada en el Pla Barcelona Ciutat Digital aprovat en mesura de govern el passat mes d'octubre de 2016 i la nova llei espanyola 39/2015 de Procediment Administratiu Comú de les Administracions Públiques.
-Aquesta estableix que a l'any 2020 a l'Estat Espanyol els canals digitals han de ser prioritaris a l'hora de proveir els serveis públics.
-El Pla Barcelona Ciutat Digital estableix com un dels seus objectius prioritaris la millora radical dels serveis púbics digitals amb la finalitat de proveir als ciutadans serveis 24x7 de més qualitat i més ajustats a les seves necessitats.
+La decisión del Gobierno de la ciudad está basada en el plan “Barcelona, ciudad digital” (PBCD), aprobado en medida de gobierno el pasado mes de octubre del 2016 y en la nueva Ley española 39/2015 del procedimiento administrativo común de las administraciones públicas.
+Esta establece que en el año 2020 en el Estado español los canales digitales tienen que ser prioritarios a la hora de proveer los servicios públicos.
+El PBCD establece como uno de sus objetivos prioritarios la mejora radical de los servicios púbicos digitales con la finalidad de proveer a la ciudadanía servicios 24x7 de más calidad y más ajustados a sus necesidades.
 
-L'Institut Municipal d'Informàtica (IMI) és l'instrument per dur a terme aquesta transformació. L'Ajuntament de Barcelona va crear el passat 2016 un Comitè de Transformació Digital i, en paral·lel, l'IMI va crear el grup d'impuls de la Transformació Digital on es troben professionals dels diferents àmbits tecnològics.
-Ambdós instruments han estat creats per impulsar i governar aquest important procés.
+El Instituto Municipal de Informática (IMI) es el instrumento para llevar a cabo esta transformación.
+El Ayuntamiento de Barcelona creó el pasado año 2016 un comité de transformación digital y, en paralelo, el IMI creó el grupo de impulso de la transformación digital, donde se encuentran profesionales de los diferentes ámbitos tecnológicos.
+Ambos instrumentos han sido creados para impulsar y gobernar este importante proceso.
 
-El Programa per a la Digitalització Oberta: Programari Lliure i Desenvolupament Àgil de Serveis, creat per el Comissionat i l'IMI, l'octubre del 2016, després del llançament del Pla Digital de Transformació, és l'impulsor de la innovació i l'excel·lència tècnica enfocat al lliurament de resultats.
-Aquest programa promou, a més, una cultura de la innovació, transparència i aprenentatge continu a tot l'Ajuntament, on es destaca:
+Programa para la digitalización abierta: software libre y desarrollo ágil de servicios, creado por el comisionado y el IMI en octubre del 2016 tras el lanzamiento del Plan digital de transformación, es el impulsor de la innovación y la excelencia técnica enfocado a la entrega de resultados.
+Este programa promueve, además, una cultura de la innovación, la transparencia y el aprendizaje continuo en todo el Ayuntamiento, en el que destaca lo siguiente:
 
-* La promoció del desenvolupament i lliurament de serveis digitals àgils, oberts i ètics.
+* La promoción del desarrollo y la entrega de servicios digitales ágiles, abiertos y éticos.
 
-* La promoció del desenvolupament d'habilitats i capacitats internes en disseny centrar en l'usuari i metodologies àgils a fi de recuperar el control dels serveis digitals.
+* La promoción del desarrollo de habilidades y capacidades internas en diseño centrado en el usuario y metodologías ágiles con el fin de recuperar el control de los servicios digitales.
 
-* La obertura de la contractació pública fent-la més transparent, senzilla i objectiva, tot reduint la burocràcia.
-La innovació en els processos de contractació permetrà a la vegada diversificar els proveïdors de tecnologia.
+* La apertura de la contratación pública, haciéndola más transparente, sencilla y objetiva, y reduciendo la burocracia.
+La innovación en los procesos de contratación permitirá también diversificar los proveedores de tecnología.
 
-* La creació, a través d'una plataforma de mercat digital, d'un grup diversificat de proveïdors locals experts.
+* La creación, a través de una plataforma de mercado digital, de un grupo diversificado de proveedores locales expertos.
 
-* La promoció de l'ús de metodologies àgils per als serveis digitals, internament i en les relacions amb proveïdors.
+* La promoción del uso de metodologías ágiles para los servicios digitales, internamente y en las relaciones con proveedores.
 
-* La revisió dels procediments de contractació d'actius i serveis tecnològics per reforçar la sobirania tecnològica i de les dades.
+* La revisión de los procedimientos de contratación de activos y servicios tecnológicos para reforzar la soberanía tecnológica y de los datos.
 
-* L'establiment de l'ús del programari lliure i de codi obert per als sistemes municipals, excepte circumstàncies excepcionals i justificades.
+* El establecimiento del uso del software libre y de código abierto para los sistemas municipales, excepto circunstancias excepcionales y justificadas.
 
-* La fixació de pràctiques tecnològiques basades en arquitectures i estàndards oberts.
+* La fijación de prácticas tecnológicas basadas en arquitecturas y estándares abiertos.
 
-Aquesta mesura de govern proporciona una visió global del programa de transformació i dels canvis incrementals proposats, exposa l'estructura de governança de la transformació, la seva orientació eminentment pràctica basada en l'establiment de mesures clares i lliuraments concrets, i proporciona un full de ruta compartit.
+Esta medida de gobierno proporciona una visión global del programa de transformación y de los cambios incrementales propuestos; expone la estructura de gobernanza de la transformación; muestra su orientación eminentemente práctica basada en el establecimiento de medidas claras y entregas concretas, y proporciona una hoja de ruta compartida.
 
-La mesura ens portarà economia de recursos i més eficàcia gràcies a la implementació de processos àgils, a l'hora que acostarem i facilitarem a la població eines per interactuar amb l'administració de manera més eficaç.
-Amb la gestió oberta de les dades i l'ús d'eines de programari lliure garantirem l'accés universal, la millora de la transparència i estarem posant les bases per noves iniciatives basades amb l'aprofitament de les dades i la creació d'una xarxa d'experts en codi obert que aportarà fortalesa i independència a l'administració.
+La medida nos aportará economía de recursos y más eficacia gracias a la implementación de procesos ágiles, al mismo tiempo que acercaremos y facilitaremos a la población herramientas para interactuar con la Administración de manera más eficaz.
+Con la gestión abierta de los datos y el uso de herramientas de software libre garantizaremos el acceso universal y la mejora de la transparencia y estaremos sentando las bases para nuevas iniciativas basadas en el aprovechamiento de los datos y la creación de una red de expertos en código abierto que aportará fortaleza e independencia a la Administración.
 
-La mesura enfoca el lliurament de serveis digitals àgils, el procés per assolir la sobirania tecnològica i la migració a programari lliure i estàndards de codi obert.
+La medida se centra en la entrega de servicios digitales ágiles, el proceso para alcanzar la soberanía tecnológica y la migración a _software_ libre y estándares de código abierto.
 
-En els annexes d'aquesta mesura de govern trobarem documents que defineixen els primers estàndards i donen directrius pels temes clau del programa.
+En los anexos a esta medida de gobierno se encuentran documentos que definen los primeros estándares y ofrecen directrices para los temas clave del programa.
 
-Aquests documents són:
+Estos documentos son los siguientes:
 
-* L'Estàndard de Serveis Digitals.
+* El estándar de servicios digitales.
 
-* El Codi de Pràctiques Tecnològiques.
+* El código de prácticas tecnológicas.
 
-* Les Metodologies Àgils a l'Ajuntament de Barcelona.
+* Las metodologías Agile en el Ayuntamiento de Barcelona.
 
-* Guia de Sobirania Tecnològica.
+* Guía de soberanía tecnológica.
 
-* Detalls del Pla de Migració a Codi Obert.
+* Detalles del Plan de migración a código abierto.
 
-* Guia de Compra pública de Tecnologia.
+* Guía de compra pública de tecnología.
 
-L'ús responsable i ètic de dades, és un element L'ús responsable i ètic de dades, és un element essencial dins Pla de Transformació Digital de l'Ajuntament, en especial la estratègia de Dades Obertes i el Data Commons, els projectes “Data Driven” i la interoperabilitat basada en formats de dades oberts. Les corresponents directrius i la seva implementació es desenvoluparan en una nova mesura de govern sobre la Estratègia de l'Ús Responsable i Ètic de Dades a l'Ajuntament de Barcelona, on es concretaran els detalls tècnics, processos i responsabilitats.
+El uso responsable y ético de datos es un elemento esencial en el Plan de transformación digital del Ayuntamiento (PTDA), en especial la estrategia de datos abiertos y el _data commons_, los proyectos data driven y la interoperabilidad basada en formatos de datos abiertos.
+Las correspondientes directrices y su implementación se desarrollarán en una nueva medida de gobierno sobre la estrategia del uso responsable y ético de datos en el Ayuntamiento de Barcelona, en la que se concretarán los detalles técnicos, los procesos y las responsabilidades.
 
-En aquesta mesura de govern també s'explica com s'aplicaran les metodologies de desenvolupament àgil a l'Ajuntament de Barcelona, transformant els equips de producte verticals en grups de treball àgils orientats al servei a través de projectes emblemàtics.
-És per això que l'IMI està posant en marxa una Oficina Tècnica Àgil i un equip de projectes àgils.
+En esta medida de gobierno también se explica cómo se aplicarán las metodologías de desarrollo ágil en el Ayuntamiento de Barcelona, transformando los equipos de producto verticales en grupos de trabajo ágiles orientados al servicio a través de proyectos emblemáticos.
+Por ello, el IMI está poniendo en marcha una oficina técnica ágil y un equipo de proyectos ágiles.
 
-Des d'una perspectiva estrictament tecnològica, l'objectiu és la creació d'un ecosistema i una infraestructura pública i oberta d'aplicacions i serveis interoperables i reutilitzables.
-Per això, cal canviar la forma en que l'administració pública opera mitjançant l'ús d'estàndards oberts i programari lliure i de codi obert, implementant interfícies informàtiques (API) obertes, públiques i ben documentades que proporcionin l‘accés a les dades obertes de l'Administració per a permetre que el sector TIC i, fins i tot altres administracions, puguin col·laborar amb l'Ajuntament per a lliurar aplicacions i serveis digitals àgils, oberts i ètics.
+Desde una perspectiva estrictamente tecnológica, el objetivo es la creación de un ecosistema y de una infraestructura pública y abierta de aplicaciones y servicios interoperables y reutilizables.
+Por eso, hay que cambiar la forma en que la Administración pública opera mediante el uso de estándares abiertos y _software libre_ y de código abierto, implementando interfaces de programación de aplicaciones (API, por sus siglas en inglés) abiertas, públicas y bien documentadas que proporcionen el acceso a los datos abiertos de la Administración para permitir que el sector de las tecnologías de la información y de la comunicación (TIC) e incluso otras administraciones puedan colaborar con el Ayuntamiento para entregar aplicaciones y servicios digitales ágiles, abiertos y éticos.
 
-Els serveis que primer es beneficiaran d'aquests canvis són: el nou portal de d'atenció ciutadana, els serveis al mòbil per a la ciutadania, la nova agenda d'actes i equipaments de la ciutat, el quadre de comandament sobre la ciutat obert als ciutadans, el portal pels proveïdors de tecnologia, i el nou servei d'identitat digital al mòbil.
+Los servicios que primero se beneficiarán de estos cambios son el nuevo portal de atención ciudadana, los servicios en el móvil para la ciudadanía, la nueva agenda de actos y equipamientos de la ciudad, el cuadro de mandos sobre la ciudad abierto a la ciudadanía, el portal para los proveedores de tecnología y el nuevo servicio de identidad digital en el móvil.
 
-Amb la formació dels nous equips àgils, comprendrem les capacitats que necessitem i ens permetrà desenvolupar un pla de contractació i un programa de creació de competències internes per impulsar la transformació. Paral·lelament, l'Ajuntament complementarà les competències internes amb habilitats i serveis proveïts per les empreses més innovadores del sector, a través d'una contractació innovadora i la creació d'una plataforma digital de contractació.
+Con la formación de los nuevos equipos ágiles, comprenderemos las capacidades que necesitamos y nos permitirá desarrollar un plan de contratación y un programa de creación de competencias internas para impulsar la transformación.
+Paralelamente, el Ayuntamiento complementará las competencias internas con habilidades y servicios provistos por las empresas más innovadoras del sector, mediante una contratación innovadora y la creación de una plataforma digital de contratación.
 
-*La transformació digital i la innovació no son el destí o punt d'arribada sinó un viatge, un procés que mai s'acaba* i en el que les iteracions es van succeint una darrera l'altre fins assolir el resultat desitjat.
-Els productes o serveis digitals i les seves interfícies evolucionen, com un organisme viu, d'acord amb les necessitats dels ciutadans i el canvi tecnològic.
+*La transformación digital y la innovación no son el destino o punto de llegada, sino un viaje, un proceso que nunca se acaba* y en el que las iteraciones se van sucediendo una tras otra hasta alcanzar el resultado deseado.
+Los productos o servicios digitales y sus interfaces evolucionan, como un organismo vivo, de acuerdo con las necesidades de los ciudadanos y el cambio tecnológico.
 
-El mateix Programa de Transformació Àgil evoluciona contínuament i la nostra ambició és seguir endavant i fer molt més del que aquesta mesura de govern exposa, doncs aquesta estableix només les bases d'un procés de millora continua.
+El propio Programa de transformación ágil evoluciona continuamente y nuestra ambición es seguir adelante y hacer mucho más de lo que esta medida de gobierno expone, pues esta establece solo las bases de un proceso de mejora continua.
